--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,9 +11,16 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create-drop
+  cloud:
+    discovery:
+      enable: true
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8081/eureka
 
-apiGatewayAddress: http://localhost:8082
+logging:
+  level:
+    org.hibernate:
+      SQL: DEBUG
+      type: TRACE
