--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.7.22'
     id 'org.jetbrains.kotlin.plugin.spring' version '1.7.22'
     id 'org.jetbrains.kotlin.plugin.jpa' version '1.7.22'
+    id "com.github.davidmc24.gradle.plugin.avro" version "1.3.0"
 }
 
 group = 'se.nt1dc'
@@ -15,14 +16,16 @@ sourceCompatibility = '17'
 repositories {
     mavenCentral()
     maven { url 'https://artifactory-oss.prod.netflix.net/artifactory/maven-oss-candidates' }
+    maven { url "https://packages.confluent.io/maven" }
 }
 
 ext {
     set('springCloudVersion', "2022.0.1")
 }
+project.ext.set("avroVersion", "1.11.0")
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation ('org.springframework.boot:spring-boot-starter-web')
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
@@ -31,11 +34,22 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+//    kafka
+    implementation 'org.springframework.kafka:spring-kafka'
+
+//    avro
+    implementation group: 'org.apache.avro', name: 'avro', version: '1.11.0'
+    implementation group: 'io.confluent', name: 'kafka-avro-serializer', version: '5.3.0'
+    implementation group: 'io.confluent', name: 'kafka-schema-registry-client', version: '5.3.0'
+
+
+//    quartz
+    implementation 'org.springframework.boot:spring-boot-starter-quartz'
+    implementation 'org.quartz-scheduler:quartz:2.3.2'
+//    database
     runtimeOnly 'org.postgresql:postgresql'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    implementation 'org.springframework.boot:spring-boot-starter-amqp'
-    implementation 'org.springframework.boot:spring-boot-starter-jta-atomikos:2.2.0.RELEASE'
-    implementation 'com.atomikos:transactions-jta:4.0.6'
+
 }
 
 dependencyManagement {
@@ -54,3 +68,8 @@ tasks.withType(KotlinCompile) {
 tasks.named('test') {
     useJUnitPlatform()
 }
+//
+//configurations {
+//    all*.exclude module : 'spring-boot-starter-logging'
+////    all*.exclude module : 'logback-classic'
+//}
